...
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:layout_editor_absoluteY="25dp">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_project"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/tw__composer_white"
        android:fitsSystemWindows="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
