...
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_project_name_mp"
        tools:text="Location" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_mp"
        android:layout_width="320dp"
        android:layout_height="353dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
...
